test_result_final.txt
   Compiling flowbot-rs v0.1.0 (C:\Users\AMAN ANU\Desktop\amxcodes\nanobot\nanobot-rs-clean)
error[E0422]: cannot find struct, variant or union type `WriteInputArgs` in module `super::process`
   --> src\tools\executor.rs:230:40
    |
230 |             let args = super::process::WriteInputArgs {
    |                                        ^^^^^^^^^^^^^^ not found in `super::process`

error[E0425]: cannot find function `write_process_input` in module `super::process`
   --> src\tools\executor.rs:240:29
    |
240 |             super::process::write_process_input(args).await
    |                             ^^^^^^^^^^^^^^^^^^^ not found in `super::process`

warning: unused import: `tokio::io::AsyncWriteExt`
 --> src\tools\process.rs:9:5
  |
9 | use tokio::io::AsyncWriteExt; // Import trait for write_all
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `Path`
 --> src\persistence.rs:6:17
  |
6 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `std::sync::Mutex`
 --> src\persistence.rs:7:5
  |
7 | use std::sync::Mutex;
  |     ^^^^^^^^^^^^^^^^

warning: unused import: `once_cell::sync::Lazy`
 --> src\persistence.rs:8:5
  |
8 | use once_cell::sync::Lazy;
  |     ^^^^^^^^^^^^^^^^^^^^^

error[E0063]: missing field `stdin` in initializer of `ProcessInfo`
   --> src\tools\process.rs:132:16
    |
132 |     let info = ProcessInfo {
    |                ^^^^^^^^^^^ missing `stdin`

warning: unused variable: `selector`
  --> src\tools\fetch.rs:52:13
   |
52 |         let selector = Selector::parse("script, style, nav, footer, header").unwrap();
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_selector`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: unused import: `std::os::windows::process::CommandExt`
  --> src\tools\process.rs:64:13
   |
64 |         use std::os::windows::process::CommandExt;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0063, E0422, E0425.
For more information about an error, try `rustc --explain E0063`.
warning: `flowbot-rs` (lib) generated 6 warnings
error: could not compile `flowbot-rs` (lib) due to 3 previous errors; 6 warnings emitted
